--- a/css/chart.css
+++ b/css/chart.css
@@ -9,3 +9,20 @@
     font-family: sans-serif;
     font-size: 11px;
 }
+
+.line {
+	fill: none;
+	stroke-width: 1.5px;
+}
+
+.tooltip rect {
+	opacity: 0.7;
+	fill: white;
+	stroke: black;
+	stroke-width: 1.5px;
+}
+
+.chart text {
+    font-family: sans-serif;
+    font-size: 11px;
+}
