--- a/css/chart.css
+++ b/css/chart.css
@@ -5,7 +5,7 @@
     shape-rendering: crispEdges;
 }
 
-.axis text {
+.chart, .tooltip, .axis text {
     font-family: sans-serif;
     font-size: 11px;
 }
@@ -20,9 +20,4 @@
 	fill: white;
 	stroke: black;
 	stroke-width: 1.5px;
-}
-
-.chart text {
-    font-family: sans-serif;
-    font-size: 11px;
 }
